post content editted

--- a/site/404.html
+++ b/site/404.html
@@ -127,7 +127,10 @@ It's a good idea to keep this template as minimal as possible in terms of both f
                     </header>
                     <section class="post-card-excerpt">
                         
-                            <p>Smart Office
+                            <p>Project
+
+  참여한 프로젝트
+
 
 </p>
                         
