--- a/site/index.html
+++ b/site/index.html
@@ -167,7 +167,10 @@ into the {body} of the default.hbs template -->
                 </header>
                 <section class="post-card-excerpt">
                     
-                        <p>Smart Office
+                        <p>Project
+
+  참여한 프로젝트
+
 
 </p>
                     
