--- a/site/knowledge-list.html
+++ b/site/knowledge-list.html
@@ -43,7 +43,19 @@
     <meta property="og:site_name" content="bello" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="listup" />
-    <meta property="og:description" content="Smart Office
+    <meta property="og:description" content="Project
+
+  참여한 프로젝트
+
+
+Smart Office
+
+
+
+Library
+
+  개발이나 업무 하면서 후에도 유용하게 쓰일 지식을 모아둔 곳
+
 
 Swift Code Snippet
 
@@ -58,7 +70,19 @@ Jenkins
     <meta property="article:tag" content="Portfolio" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="listup" />
-    <meta name="twitter:description" content="Smart Office
+    <meta name="twitter:description" content="Project
+
+  참여한 프로젝트
+
+
+Smart Office
+
+
+
+Library
+
+  개발이나 업무 하면서 후에도 유용하게 쓰일 지식을 모아둔 곳
+
 
 Swift Code Snippet
 
@@ -95,7 +119,19 @@ Jenkins
         "@type": "WebPage",
         "@id": "http://localhost:4000/knowledge-list"
     },
-    "description": "Smart Office
+    "description": "Project
+
+  참여한 프로젝트
+
+
+Smart Office
+
+
+
+Library
+
+  개발이나 업무 하면서 후에도 유용하게 쓰일 지식을 모아둔 곳
+
 
 Swift Code Snippet
 
@@ -185,7 +221,19 @@ into the {body} of the default.hbs template -->
 
             <section class="post-full-content">
                 <div class="kg-card-markdown">
-                    <p><a href="https://tintin29110.github.io/smartoffice">Smart Office</a></p>
+                    <h2 id="project">Project</h2>
+<blockquote>
+  <p>참여한 프로젝트</p>
+</blockquote>
+
+<p><a href="https://tintin29110.github.io/smartoffice">Smart Office</a></p>
+
+<p><br /><br /></p>
+
+<h2 id="library">Library</h2>
+<blockquote>
+  <p>개발이나 업무 하면서 후에도 유용하게 쓰일 지식을 모아둔 곳</p>
+</blockquote>
 
 <p><a href="https://www.notion.so/seyoon37/b310fb9c48034e8eb0116a20e6850647?v=4a918eb3861840269b33b8a142ce2295">Swift Code Snippet</a></p>
 
